# gavaconnect-sdk-python

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  smoke_test.py  test_imports.py
.github/policies/: python-sdk.yml
.github/workflows/: build-publish.yml  lint-test.yml
gavaconnect/: __init__.py  _version.py  config.py  errors.py  facade_async.py
gavaconnect/auth/: README.md  __init__.py  basic.py  bearer.py  credentials.py  providers.py
gavaconnect/checkers/: __init__.py  _pin.py
gavaconnect/helpers/: __init__.py  idempontency.py  idempotency.py
gavaconnect/http/: __init__.py  logging.py  telemetry.py  transport.py
gavaconnect/resources/: __init__.py
gavaconnect/resources/checkers/: __init__.py  _pin.py
tests/: test_auth_basic.py  test_auth_bearer.py  test_auth_module.py  test_auth_providers.py  test_errors.py  test_http_logging.py  test_http_module.py  test_http_telemetry.py  test_http_transport.py  test_idempotency.py  test_main.py  test_pin.py  test_telemetry_degradation.py
tests/unit/: test_checkers_error_surface.py  test_checkers_validate_pin_401_then_refresh.py  test_checkers_validate_pin_get_variant.py  test_checkers_validate_pin_success.py
